[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Context graph API, webhooks, CLI, and MCP (hexagonal)."
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "keyring>=25.0.0",
    "mcp>=1.0.0",
    "rich>=13.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]
benchmarks = [
    "pyyaml>=6.0",
    "openai>=1.50.0",
]
graph = [
    "neo4j>=5.28.0",
]
github = [
    "pygithub>=2.8.0",
]
reconciliation-agent = [
    "pydantic-deep>=0.3.0",
]
hatchet = [
    "hatchet-sdk>=1.29.0",
]
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
all = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "neo4j>=5.28.0",
    "pygithub>=2.8.0",
    "pydantic-deep>=0.3.0",
    "hatchet-sdk>=1.29.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
potpie = "adapters.inbound.cli.main:main"
potpie-mcp = "adapters.inbound.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "adapters", "bootstrap", "benchmarks"]
include = [
    "adapters/inbound/cli/templates/**/*.md",
    "adapters/inbound/cli/templates/**/*.yaml",
    "scripts/**/*.py",
    "scripts/**/*.json",
    "benchmarks/use_cases/**/*.yaml",
    "benchmarks/fixtures/raw_events/**/*.json",
    "benchmarks/_legacy/data/**/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "domain",
    "application",
    "adapters",
    "bootstrap",
    "benchmarks",
    "adapters/inbound/cli/templates/**/*.md",
    "adapters/inbound/cli/templates/**/*.yaml",
    "scripts/**/*.py",
    "scripts/**/*.json",
]

[tool.ruff]
target-version = "py310"
src = [".", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (no external services required, but exercise real third-party libs)",
    "cli_auth_e2e: opt-in live CLI auth tests (Linear/Jira/Confluence); requires RUN_CLI_AUTH_E2E=1",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
