[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Context graph API, webhooks, CLI, and MCP (hexagonal)."
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "rich>=13.0",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]
benchmarks = [
    "pyyaml>=6.0",
    "openai>=1.50.0",
]
graph = [
    "neo4j>=5.28.0",
]
falkordb = [
    # FalkorDBLite (embedded) requires Python >= 3.12; marker keeps resolution
    # valid across the project's wider requires-python range.
    "falkordblite>=0.10.0; python_version >= '3.12'",
    "redis>=7.1,<8",
]
github = [
    "pygithub>=2.8.0",
]
reconciliation-agent = [
    "pydantic-deep>=0.3.0",
]
hatchet = [
    "hatchet-sdk>=1.29.0",
]
observability = [
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
all = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "neo4j>=5.28.0",
    "pygithub>=2.8.0",
    "pydantic-deep>=0.3.0",
    "hatchet-sdk>=1.29.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-openai>=0.40b0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
potpie = "adapters.inbound.cli.host_cli:main"
potpie-mcp = "adapters.inbound.mcp.server:main"

# Daemon-shell components loaded by the detached daemon's runtime
# (host.daemon_runtime.EntryPointPluginsLoader).
[project.entry-points."potpie.shell.components"]
context_graph = "adapters.inbound.shell_component.component:register"

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "adapters", "bootstrap", "benchmarks", "host"]
include = [
    "domain/playbooks/**/*.md",
    "adapters/inbound/cli/templates/**/*.md",
    "adapters/inbound/cli/templates/**/*.yaml",
    "scripts/**/*.py",
    "scripts/**/*.json",
    "benchmarks/use_cases/**/*.yaml",
    "benchmarks/fixtures/raw_events/**/*.json",
    "benchmarks/_legacy/data/**/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "domain",
    "application",
    "adapters",
    "bootstrap",
    "benchmarks",
    "domain/playbooks/**/*.md",
    "adapters/inbound/cli/templates/**/*.md",
    "adapters/inbound/cli/templates/**/*.yaml",
    "scripts/**/*.py",
    "scripts/**/*.json",
]

[tool.ruff]
target-version = "py310"
src = [".", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests (no external services required, but exercise real third-party libs)",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
