[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potpie-integrations"
version = "0.1.0"
description = "Potpie external integrations (hexagonal layout, mirrors context-engine structure)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["integrations"]

[tool.hatch.build.targets.sdist]
include = ["integrations"]
