[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observability"
version = "0.1.0"
description = "Liftable observability layer: structured logging + Sentry + logfire behind one contract. app.*-free."
requires-python = ">=3.10"
# Core is stdlib-only on purpose: max portability, survives a codebase rewrite.
dependencies = []

[project.optional-dependencies]
loguru = ["loguru>=0.7.3"]
sentry = ["sentry-sdk>=2.43.0"]
logfire = ["logfire>=3.2.0"]
fastapi = ["starlette>=0.37"]
celery = ["celery>=5.3"]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["observability"]
