[package]
name = "parsing_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "parsing_rs"
crate-type = ["cdylib", "rlib"]

[package.metadata.maturin]
name = "parsing_rs"

[dependencies]
pyo3 = { version = "0.28.2", features = ["extension-module"] }
walkdir = "2"
jwalk = "0.8"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
bytecount = "0.6"
ignore = "0.4"
memmap2 = "0.9"

tree-sitter = "0.26"
streaming-iterator = "0.1"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-ocaml = "0.24"
tree-sitter-elisp = "1.6"
tree-sitter-elm = "5.9"
tree-sitter-ql = "0.23"

[dev-dependencies]
tempfile = "3"
