[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "parsing"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "grep-ast>=0.9.0",
    "loguru>=0.7.3",
    "networkx>=3.6.1",
    "pygments>=2.20.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.6.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest-benchmark>=5.2.3",
]
