[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potpie-sandbox"
version = "0.1.0"
description = "Potpie sandbox core with hexagonal workspace and runtime providers."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
daytona = ["daytona>=0.134.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[tool.hatch.build.targets.wheel]
packages = ["sandbox"]

[tool.hatch.build.targets.sdist]
include = ["sandbox", "tests"]

[tool.ruff]
target-version = "py310"
src = [".", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

